# ufo-spacing-lib

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PUBLISHING.md  README.md  pyproject.toml
docs/: METRICS_RULES_IMPLEMENTATION_PLAN.md  plan-rules-generator.md
scripts/: analyze_composites.py  performance_benchmark.py
src/ufo_spacing_lib/: __init__.py  contexts.py  groups_core.py  margins_utils.py  rules_constants.py  rules_core.py  rules_generator.py  rules_manager.py  rules_parser.py  virtual.py
src/ufo_spacing_lib/commands/: __init__.py  base.py  groups.py  kerning.py  margins.py  rules.py
src/ufo_spacing_lib/editors/: __init__.py  kerning.py  margins.py  spacing.py
tests/: __init__.py  mocks.py  test_editors.py  test_groups_commands.py  test_groups_manager.py  test_kerning_commands.py  test_margins_rules_integration.py  test_margins_utils.py  test_rules_commands.py  test_rules_core.py  test_rules_generator.py  test_rules_manager.py  test_rules_parser.py  test_spacing_editor_rules.py  test_sync_rules_command.py  test_virtual.py
