[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ufo-spacing-lib"
version = "0.1.1"
description = "Font spacing management library for UFO-compatible fonts (kerning, margins, groups)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alexander Lubovenko", email = "lubovenko@gmail.com" }
]
keywords = [
    "font",
    "typography",
    "kerning",
    "spacing",
    "ufo",
    "fonttools",
    "type-design"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/typedev/ufo-spacing-lib"
Repository = "https://github.com/typedev/ufo-spacing-lib"
Documentation = "https://github.com/typedev/ufo-spacing-lib#readme"
Issues = "https://github.com/typedev/ufo-spacing-lib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ufo_spacing_lib"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

